2022-09-12  Karl Berry  <karl@freefriends.org>

	* README: new file to mention both programs.
	* bibtex8.1: remove old addresses for Kempson and Aguilar-Sierra.

2022-09-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* bibtex.c:
	Initialize max_print_line after checking options.
	This change prevents unwanted looking for texmf.cnf.

2022-08-30  Karl Berry  <karl@freefriends.org>

	* bibtex8.1,
	* bibtexu.1: typo fixes from Hilmar Preu\ss{}e,
	https://tug.org/pipermail/tex-live/2022-June/048227.html

2022-05-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (22 may 2022).
	* bibtex.c, utils.c, version.h:
	Show "Release version" and TeX Live version at the first line
	of a banner.

2022-05-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (17 may 2022).
	* bibtex-4.c, bibtex.h:
	Fix a bug of text.prefix$ and text.length$ in bibtexu.
	* tests/testsubstr[au].bib, substr[au].bbl, txtprfx[au].bbl:
	Update tests.

2022-05-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (8 may 2022).
	* bibtex-2.c:
	Set LEGAL_ID_CHAR to id_class of 8bit characters.
	* Makefile.am, tests/bibtex[8u].test,
	tests/bibtex8-char.test, tests/bibtexu-sort.test,
	tests/test{case,char,name,period,substr,txtprfx,width,iscjk}.bst,
	tests/case[au].bbl, tests/chara.bbl, tests/name[au].bbl,
	tests/substra.bbl, tests/txtprfxa.bbl, tests/yannis.bbl,
	tests/exampl.bbl, tests/ltnbib.bib, tests/mlgbib.bib,
	tests/testcase[au].bib, tests/yannis.bib:
	Update tests.

2022-05-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (2 may 2022).
	* bibtex.[ch], gblvars.h:
	Accept max_print_line variable in kpathsea.
	We can define max_print_line.bibtex8 or max_print_line.bibtexu
	in texmf.cnf.
	* tests/bibtex[8u]-char.test, tests/name[au].bbl:
	Update tests.

2022-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac, version.h:
	Bump version to 4.00 (29 apr 2022).

	Both BibTeX8 and BibTeXu::